--- a/final-reports.html
+++ b/final-reports.html
@@ -19,10 +19,10 @@
   <hr>
 
   <ol>
-      <li><a href="d94-report.html">
+      <li><a href="/d94-report.html">
         D94: Octree Optimization</a>
       </li>
-      <li><a href="CSCD95-Final-Report.pdf">
+      <li><a href="/CSCD95-Final-Report.pdf">
         D95: Nuts and Bolts of a Path Tracer (PDF)</a>
       </li>
   </ol>
