--- a/final-reports.html
+++ b/final-reports.html
@@ -10,11 +10,10 @@
   <h1 class="nocount">Reports for Project Courses</h1>
 
   <p>
-    During my last year of my bachelors at UTSC, I had the amazing oppourtunity
+    During the last year of my bachelors at UTSC, I had the amazing opportunity
     of being enrolled into two research project courses. With an unhealthy
-    interest in computer graphics, I decided to use the eight months that these
-    two courses offered to implement my own path tracer. Below, you'll find
-    the final reports for both courses.
+    interest in computer graphics, I decided to use the eight months to implement
+    my own path tracer. Below, you'll find the final reports from both courses.
   </p>
   <hr>
 
