--- a/d94-report.html
+++ b/d94-report.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>CSCD94 Report: Implementing Octree Spacial Subdivision for Optimal Ray Tracing.</title>
-
+<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 </head>
 
 
