--- a/final-reports.html
+++ b/final-reports.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Reports for Project Courses</title>
+  <meta charset="utf-8">
+  <title>Reports for Project Courses</title>
+  <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 </head>
 
 <body>
