Adding final render

--- a/final-reports.html
+++ b/final-reports.html
@@ -28,10 +28,24 @@
   </ol>
   <hr>
 
+  <figure>
+      <a href="/img/final-render-1080.jpg">
+      <img src="/img/final-render-1080.jpg" alt="Output of path tracer"
+        style="max-width: 800px;">
+      </a>
+      <figcaption>
+        A scene rendered by the D95 path tracer, with refractive,
+        diffuse, and metalic materials. There's much room for improvement, such
+        as decreasing noise, removing black edges (due to trace depth), and
+        implementing exposure control.
+      </figcaption>
+  </figure>
+
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic|Roboto+Slab|Roboto+Mono:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles/report.css">
   <link rel="stylesheet" href="styles/github.css">
 </body>
+<hr>
 
 <footer>
   <small>
